--- a/formalism.tex
+++ b/formalism.tex
@@ -1,5 +1,7 @@
 \chapter{Propositional Classical Logic}\label{chapter:PropositionalClassicalLogic}
 
+\TODO{Few words of caution about Formalism A note by AG.}
+
 In this chapter we present two deep inference formalisms; a new formalism, which we call (as suggested by Fran\c{c}ois Lamarche) `the functorial calculus', and the traditional deep inference formalism `the calculus of structures'. The functorial calculus is a development of the calculus of structures \cite{}, which was motivated by the desire to remove bureaucracy of Type A \cite{} (for this reason the functorial calculus, or variations thereof, is often also referred to as `Formalism A').
 
 \TODO{Cite: \emph{On the Proof Complexity of Deep Inference}.}
