--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -1,6 +1,6 @@
 \chapter{Global Reductions}
 
-\TODO{Polarity assignment: `to' -> `for'}
+\TODO{Polarity assignment: `to' -> `for'.}
 
 %-------------------------------------------------
 \begin{definition}\label{definition:FlowReduction}
@@ -103,7 +103,7 @@ The notion of substitution can be extended to allow $\phi$ to contain interactio
 \end{remark}
 %-----------
 
-\TODO{Alessio: $\boldsymbol\epsilon$ is used to denote the upper edges of a flow. The definition of upper edges is given as a set (from AF1). Why should they be sequences? Wouldn't that give the impression that they are not commutative?}
+\TODO{Let $\boldsymbol\epsilon$ be a sequence, check if this makes our life easier.}
 
 \TODO{The labels on upper/lower edges do not fit with the labels used in the definition of four boxes.}
 
