--- a/global_reductions/simplifier.tex
+++ b/global_reductions/simplifier.tex
@@ -427,7 +427,7 @@ We then define $\Simpl(\Phi,a_1,\dots,a_n)$ to be such that $\Phi\to_\frfb\Simpl
 %---------------
 
 %------------------------------------------------------------
-\begin{proposition}\label{proposition:IsolatedSubflowRemover}
+\begin{proposition}\label{proposition:Simplifier}
 Given distinct and pairwise non-dual atoms $a_1$, $\dots$, $a_n$, and a derivation $\Phi$,
 \begin{enumerate}
 \item $\Simpl(\Phi,a_1,\dots,a_n)$ is in simple form with respect to $a_1$, $\dots$, $a_n$;
