--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -123,7 +123,7 @@ where the evidenced interaction and cut vertices belong to the same connected co
 
 %----------------------------------------------
 \begin{theorem}\label{theorem:SoundPathBreaker}
-Reduction $\to_\frpb$ is sound; moreover, if\/ $\Phi\to_\frpb\Psi$, then the size of $\Psi$ depends at most cubically on the size of $\Phi$.
+Reduction $\to_\frpb$ is sound; moreover, if\/ $\Phi\to_\frpb\Psi$, then the size of $\Psi$ depends polynomially on the size of $\Phi$.
 \end{theorem}
 
 \begin{proof}
@@ -230,7 +230,7 @@ $}
  } 
 }\qquad.
 \]
-We know that the size of $\Phi'$ depends at most cubically on the size of $\Phi$ by Theorem~\vref{theorem:aiDecomposedForm}, and that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and $\beta$ by Lemma~\vref{lemma:GenericContraction}, so $\Psi$ depends at most cubically on the size of $\Phi$.
+We know that the size of $\Phi'$ depends at most cubically on the size of $\Phi$ by Theorem~\vref{theorem:aiDecomposedForm}, and that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and $\beta$ by Lemma~\vref{lemma:GenericContraction}, so $\Psi$ depends polynomially on the size of $\Phi$.
 \end{proof}
 %----------
 
@@ -434,7 +434,7 @@ Given an atom $a$, and a derivation $\Phi$ that is not weakly streamlined with r
 \begin{enumerate}
 \item $\PB(\Phi,a)$ is weakly streamlined with respect to both $a$ and $\bar a$;
 \item for any atom $b$, if $\Phi$ is weakly streamlined with respect to $b$, then $\PB(\Phi,a)$ is weakly streamlined with respect to $b$; and
-\item the size of\/ $\PB(\Phi,a)$ depends at most cubically on the size of\/ $\Phi$.
+\item the size of\/ $\PB(\Phi,a)$ depends polynomially on the size of\/ $\Phi$.
 \end{enumerate}
 \end{proposition}
 
