--- a/global_reductions/threshold_formulae.tex
+++ b/global_reductions/threshold_formulae.tex
@@ -793,7 +793,7 @@ as follows: Given atoms $\avec 1n$, instantiate $\to_{\frmis_n}$ and $\MISR_n$ w
 
 %-------------------------------------------------------------------------
 \begin{theorem}\label{theorem:SoundQuasipolynomialMultipleSubflowsRemoval}
-For every $n>0$, $\to_{\frqmis_n}$ is sound; moreover, if\/ $\Phi\to_{\frqmis_n}\Psi$, then the size of $\Psi$ depends at most cubically on the size of $\Phi$ and quasipolynomially on $n$.
+For every $n>0$, $\to_{\frqmis_n}$ is sound; moreover, if\/ $\Phi\to_{\frqmis_n}\Psi$, then the size of $\Psi$ depends polynomially on the size of $\Phi$ and quasipolynomially on $n$.
 \end{theorem}
 
 \begin{proof}
@@ -811,7 +811,7 @@ Given atoms $a_1$, $\dots$, $a_n$ and a derivation $\Phi$ that is in simple form
 \item if $\Phi$ is weakly streamlined with respect to $b$, then $\QMISR_n(\Phi,a_1,\dots,a_n)$ is weakly streamlined with respect to $b$, and
 \item if $b$ is not the dual of any of $a_1$, $\dots$, $a_n$ and $\Phi$ is in simple form with respect to $b$, then $\QMISR_n(\Phi,a_1,\dots,a_n)$ is in simple form with respect to $b$; and
 \end{itemize}
-\item the size of\/ $\QMISR_n(\Phi,a_1,\dots,a_n)$ depends at most cubically on the size of\/ $\Phi$, and quasipolynomially on $n$.
+\item the size of\/ $\QMISR_n(\Phi,a_1,\dots,a_n)$ depends polynomially on the size of\/ $\Phi$, and quasipolynomially on $n$.
 \end{enumerate}
 \end{proposition}
 
