--- a/global_reductions/isolated_subflow.tex
+++ b/global_reductions/isolated_subflow.tex
@@ -124,7 +124,7 @@ Since $\psi$ is connected and contains no identity or cut vertices, the mapping 
  }
 }\quad.
 \]
-We know that the size of $\Phi_\ttt$ and the size of $\Phi_\fff$ depend at most cubically on the size of $\Phi$ by Theorem~\vref{theorem:aiDecomposedForm} and Proposition~\vref{proposition:DerivationSubstitution}, and that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and $\beta$ by Lemma~\vref{lemma:GenericContraction}, so the size $\Psi$ depends at most cubically on the size of $\Phi$.
+We know that the size of $\Phi_\ttt$ and the size of $\Phi_\fff$ depend polynomially on the size of $\Phi$ by Theorem~\vref{theorem:aiDecomposedForm} and Proposition~\vref{proposition:DerivationSubstitution}, and that the size of $\Psi$ depends at most quadratically on the size of $\alpha$ and $\beta$ by Lemma~\vref{lemma:GenericContraction}, so the size of $\Psi$ depends polynomially on the size of $\Phi$.
 \end{proof}
 %----------
 
@@ -329,7 +329,7 @@ Given an atom $a$, and a derivation $\Phi$ that is in simple form, but is not we
 \item if $\Phi$ is weakly streamlined with respect to $b$, then $\ISR(\Phi,a)$ is weakly streamlined with respect to $b$, and
 \item if $b$ is not the dual of $a$ and $\Phi$ is in simple form with respect to $b$, then $\ISR(\Phi,a)$ is in simple form with respect to $b$; and
 \end{itemize}
-\item the size of\/ $\ISR(\Phi,a)$ depends at most cubically on the size of\/ $\Phi$.
+\item the size of\/ $\ISR(\Phi,a)$ depends polynomially on the size of\/ $\Phi$.
 \end{enumerate}
 \end{proposition}
 
