--- a/global_reductions/multiple_isolated_subflow.tex
+++ b/global_reductions/multiple_isolated_subflow.tex
@@ -370,7 +370,7 @@ In the following we refer to the figure in Definition~\ref{definition:MultipleIs
 %--------------------------------
 \newcommand{\MISR}{\mathsf{MISR}}
 \begin{definition}\label{definition:MultipleIsolatedSubflowsRemover}
-For every $n>0$, given the atoms, formulae and derivations described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, the \emph{Multiple Isolated Subflow Remover}\index{Multiple Isolated Subflows Remover!operator}, $\MISR_n$, is an operator whose arguments are atoms $a_1$, $\dots$, $a_n$ (that, without loss of generality, we assume coincide with the atoms given in Definition~\ref{definition:MultipleIsolatedSubflowsRemoval}), and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a_1$, $\dots$, $a_n$, with $\ai$-decomposed form
+For every $n>0$, given the atoms, formulae and derivations described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, the \emph{Multiple Isolated Subflow Remover}\index{Multiple Isolated Subflows Remover!operator}, $\MISR_n$, is an operator whose arguments are atoms $a_1$, $\dots$, $a_n$ (that, without loss of generality, we assume coincide with the atoms given in Definition~\ref{definition:MultipleIsolatedSubflowsRemoval}), and a derivation $\Phi$ that is in simple form with respect to $a_1$, $\dots$, $a_n$. If $n=1$ and $\Phi$ is weakly streamlined with respect to $a_1$, then $\MISR_1(\Phi,a_1)=\Phi$; if $n>1$ and, for some $1\le i\le n$, $\Phi$ is weakly streamlined with respect to $a_i$, then $\MISR(\Phi,a_1,\dots,a_n)=\MISR_{n-1}=(\Phi,a_1,\dots,a_{i-1},a_{i+1},\dots,a_n)$; otherwise, consider the following $\ai$-decomposed form of $\Phi$:
 \[
 \vlder{\Phi'}{}
 {
@@ -450,9 +450,8 @@ For every $n>0$, given the atoms, formulae and derivations described in Definiti
  )
 }\quad,
 \]
-and atomic flow
+with atomic flow
 \[
-\phi''\;=\;
 \atomicflow{
 (-12,  8)*{\afvjdm8{}{\boldsymbol\epsilon}};
 (  4, 10)*{\afaidmex{}{}{}{}{}{}{20}{4}};
@@ -638,7 +637,7 @@ We then define $\MISR_n(\Phi,a_1,\dots,a_n)$ to be such that $\Psi\to_\fris\MISR
 
 %--------------------------------------------------------------------
 \begin{proposition}\label{proposition:MultipleIsolatedSubflowRemover}
-Given the atoms, formulae and derivations described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, and atoms $a_1$, $\dots$, $a_n$ and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a_1$, $\dots$, $a_n$,
+Given the atoms, formulae and derivations described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, and atoms $a_1$, $\dots$, $a_n$ and a derivation $\Phi$ that is in simple form with respect to $a_1$, $\dots$, $a_n$,
 \begin{enumerate}
 \item $\MISR_n(\Phi,a_1,\dots,a_n)$ is weakly streamlined with respect to $a_1$, $\dots$, $a_n$;
 \item for any atom $b$,
@@ -651,7 +650,7 @@ Given the atoms, formulae and derivations described in Definition~\vref{definiti
 \end{proposition}
 
 \begin{proof}
-Let $\phi$, $\psi_1$, $\dots$, $\psi_n$, $\phi'$, $\psi'_1$, $\dots$, $\psi'_n$, $\phi''$ and $\psi''$ be the atomic flows given in Definition~\ref{definition:MultipleIsolatedSubflowsRemover}, then
+If $\Phi$ is weakly streamlined to some atom from $a_1$, $\dots$, $a_n$, the result follows by induction. Assume $\Phi$ is not weakly streamlined to any atom from $a_1$, $\dots$, $a_n$, and let $\phi$, $\psi_1$, $\dots$, $\psi_n$, $\phi'$, $\psi'_1$, $\dots$, $\psi'_n$ and $\psi''$ be the atomic flows given in Definition~\ref{definition:MultipleIsolatedSubflowsRemover}, then
 \begin{enumerate}
 \item by definition there is no path in $\phi$ from an interaction to a cut vertex whose edges are mapped to from instances of one of $a_1$, $\dots$, $a_n$. By Lemma~\vref{lemma:MultipleIsolatedSubflowsRemovalPaths}, we know that if there is a path from an interaction to a cut vertex in the atomic flow of $\MISR_n(\Phi,a_1,\dots,a_n)$ whose edges are mapped to from instances of one of $a_1$, $\dots$, $a_n$, then there must be a path from an interaction to a cut vertex in $\phi$ whose edges are mapped to from instances of one of $a_1$, $\dots$, $a_n$. Hence, the statement follows by contradiction;
 \item
