--- a/global_reductions/threshold_formulae.tex
+++ b/global_reductions/threshold_formulae.tex
@@ -803,7 +803,7 @@ The result follows by Theorem~\vref{theorem:SoundMultipleIsolatedSubflowsRemoval
 
 %------------------------------------------------------------
 \begin{proposition}\label{proposition:QuasipolynomialMultipleIsolatedSubflowRemover}
-Given atoms $a_1$, $\dots$, $a_n$ and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a_1$, $\dots$, $a_n$,
+Given atoms $a_1$, $\dots$, $a_n$ and a derivation $\Phi$ that is in simple form with respect to $a_1$, $\dots$, $a_n$,
 \begin{enumerate}
 \item $\QMISR_n(\Phi,a_1,\dots,a_n)$ is weakly streamlined with respect to $a_1$, $\dots$, $a_n$;
 \item for any atom $b$,
