Added DI bibliography

--- a/thesis.tex
+++ b/thesis.tex
@@ -57,9 +57,10 @@
 \norestrictions
 
 \begin{document}
+\bibliographystyle{alpha}
 %\bibliographystyle{agsm}
 %\bibliographystyle{harvard}
-\bibliographystyle{chicago}
+%\bibliographystyle{chicago}
 \renewcommand{\thepage}{\roman{page}}
 \maketitle
 
@@ -144,7 +145,7 @@
 \cfoot{}
 \pagestyle{fancy}
 \small
-%\bibliography{npr,mypapers,books,misc}
+\bibliography{di-biblio}
 
 \end{document}
 
