Removed conservation of polarity and minor fixes

--- a/global_reductions/threshold_formulae.tex
+++ b/global_reductions/threshold_formulae.tex
@@ -1,4 +1,4 @@
-\subsection{Threshold Formulae}\label{subsubsection:ThresholdFormulae}
+\subsection{Threshold Formulae}\label{subsection:ThresholdFormulae}
 
 \TODO{Change this introduction}
 
