--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -33,12 +33,6 @@ A reduction $R$ is \emph{sound}\index{reduction!sound} if, for every $\phi$ and 
 
 \TODO{Explain that we force the contractum to be unique (by convention).}
 
-\TODO{Alessio said: `\emph{How can you give the same polarity assignment to two flows? Also, importantly, note that if you have reductions between flows with no upper and lower edges, the polarity assignments can flip at will. The notion you're trying to convey here needs much more careful definition.}'.}
-
-\TODO{Alessio: I want to allow identity and cuts as long as they do not map to vertices in $\phi$. Since $\phi$ only contains $a$ and not $\bar a$, it can not contain any identity or cut vertices. I added a sentence to the proof to make this clear.}
-
-\TODO{Make sure that it is always clear that $f_i$ is a flow isomorphism.}
-
 %------------------------------------------------------------
 \begin{proposition}\label{proposition:DerivationSubstitution}
 Given a derivation\/ $\vlder\Phi\SKS{\beta}\alpha$, let its associated flow have shape
@@ -103,17 +97,15 @@ The notion of substitution can be extended to allow $\phi$ to contain interactio
 \end{remark}
 %-----------
 
-\TODO{Let $\boldsymbol\epsilon$ be a sequence, check if this makes our life easier.}
-
-\TODO{The labels on upper/lower edges do not fit with the labels used in the definition of four boxes.}
-
 %---------------------------------------------
 \begin{remark}\label{remark:ReductionPolarity}
 For any reduction $\mathrel R$ defined in this section, and any two atomic flows $\phi$ and $\psi$, such that $\phi\mathrel{R}\psi$, if $\pi$ is a polarity assignment for $\phi$, then by Definition~\vref{definiton:InducedPolarity}, $\pi$ is a polarity assignment for $\psi$.
 \end{remark}
 %-----------
 
-%-------------
+\TODO{Let $\boldsymbol\epsilon$ be a sequence, check if this makes our life easier, in particular we might not need the second part of the next convention:}
+
+%-----------------
 \begin{convention}
 To avoid ambiguity in Definitions~\vref{definition:FourBoxes}, \vref{definition:IsolatedSubflowRemoval}, \vref{definition:PathBreaker} and \vref{definition:MultipleIsolatedSubflowsRemoval} we have establish the following convention:
 Let $\boldsymbol\epsilon=\{\epsilon_1,\dots,\epsilon_n\}$, $\boldsymbol\iota=\{\iota_1,\dots,\iota_m\}$, $\boldsymbol{\epsilon'}=\{\epsilon'_1,\dots,\epsilon'_n\}$ and $\boldsymbol{\iota'}=\{\iota'_1,\dots,\iota'_m\}$, then, when we write
