--- a/local_reductions.tex
+++ b/local_reductions.tex
@@ -201,8 +201,6 @@ An (\emph{atomic-flow}) \emph{reduction rule $r$ from flow $\phi'$ to flow $\psi
 we define reduction rules with graphical expressions $r\colon\phi'\to\psi'$, where $f$ and $g$ are indicated by labelling edges. For every reduction rule $r\colon\phi'\to\psi'$, the reduction ${\to_r}$ is defined, such that $\phi\to_r\psi$ if and only if $\phi'$ appears as a subgraph in $\phi$ and we obtain $\psi$ by replacing $\phi'$ with $\psi'$ in $\phi$, while respecting the correspondence of edges; we call this operation a \emph{reduction by $r$}\index{reduction!by rule}.
 \end{definition}
 
-\TODO{Consider making a remark about conserving polarity assignments.}
-
 \begin{remark}\label{remark:FlowReductionRuleProperFlow}
 The condition on polarity assignments for a reduction rule $r$ guarantees that the $\psi$ in $\phi\to_r\psi$ is a proper atomic flow, if $\phi$ is one.
 \end{remark}
@@ -639,7 +637,7 @@ It is straightforward to verify the statement by checking each critical pair of 
 %=======================================
 \section{Conservation of Paths}\label{section:FlowRewritePathConservation}
 
-\TODO{Show that the number and length of `super paths' are conserved by all reduction rules.}
+\TODO{Show that the number and length of `super paths' are conserved by all reduction rules. Or some remark to this effect... Not important...}
 
 %========================================
 \section{Complexity}\label{section:FlowRewriteComplexity}
